--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react-scripts": "2.1.2"
   },
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "next",
+    "react-dom": "next"
   },
   "scripts": {
     "start": "react-scripts start",
